--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -254,8 +254,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/result"
-        android:layout_width="347dp"
-        android:layout_height="234dp"
+        android:layout_width="352dp"
+        android:layout_height="241dp"
         app:cardBackgroundColor="@color/purple_500"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -270,18 +270,56 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/textView10"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_weight="1"
-                android:text="21.5"
+                android:layout_height="wrap_content"
+                android:text="BMI"
+                android:textAlignment="center"
+                android:textColor="@color/design_default_color_secondary"
+                android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="22.18"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textColorHighlight="@color/white"
-                android:textColorHint="@color/white"
-                android:textColorLink="@color/white"
-                android:textSize="38dp"
-                android:textStyle="bold" />
+                android:textSize="38dp" />
+
+            <TextView
+                android:id="@+id/resultbmi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="HEALTHY"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_green_light"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="normal range 18.5-24.9"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="DAILY METABOLISM"
+                android:textAlignment="center"
+                android:textColor="@color/teal_200"
+                android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="1800 kcal"
+                android:textAlignment="center"
+                android:textSize="34sp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
