--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -256,12 +256,17 @@
         android:id="@+id/result"
         android:layout_width="352dp"
         android:layout_height="241dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="455dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="35dp"
         app:cardBackgroundColor="@color/purple_500"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="455dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -270,7 +275,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/bmitext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="BMI"
@@ -279,16 +284,16 @@
                 android:textSize="34sp" />
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/bmivalue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="22.18"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="38dp" />
+                android:textSize="34dp" />
 
             <TextView
-                android:id="@+id/resultbmi"
+                android:id="@+id/norm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="HEALTHY"
@@ -297,7 +302,7 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/normtext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="normal range 18.5-24.9"
@@ -305,7 +310,7 @@
                 android:textColor="@color/white" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/dailymetabo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="DAILY METABOLISM"
@@ -314,11 +319,12 @@
                 android:textSize="34sp" />
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/metabolismvalue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="1800 kcal"
                 android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="34sp" />
         </LinearLayout>
 
