BMI all done + toast

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,10 +9,13 @@
     <color name="teal_700">#FF018786</color>
 
 
-
     <color name="layout_background">#5113C6</color>
     <color name="card_background">#B28FCC</color>
     <color name="text_hint">#767B8E</color>
     <color name="button_background">#FFEB3B</color>
 
+    <color name="obese">#DF0505</color>
+    <color name="healthy">#81D124</color>
+    <color name="over_weight">#DF0505</color>
+    <color name="under_weight">#DF0505</color>
 </resources>
